src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__a_variable_declaration_block_needs_to_end_with_endvar.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error: Missing expected Token [KeywordEndVar]
  ┌─ <internal>:1:17
  │
1 │ PROGRAM buz VAR END_PROGRAM 
  │                 ^^^^^^^^^^^ Missing expected Token [KeywordEndVar]

error: Unexpected token: expected KeywordEndVar but found 'END_PROGRAM'
  ┌─ <internal>:1:17
  │
1 │ PROGRAM buz VAR END_PROGRAM 
  │                 ^^^^^^^^^^^ Unexpected token: expected KeywordEndVar but found 'END_PROGRAM'


